fixed mobile overflow-x whitespace issue with new meta tag and added function for back to top button

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,11 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* html,
+body {
+  position: relative;
+  overflow-x: hidden;
+} */
 html {
   scroll-behavior: smooth;
 }
